add more queue related code

--- a/queue.ipynb
+++ b/queue.ipynb
@@ -209,9 +209,276 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "890509c7",
+   "metadata": {},
+   "source": [
+    "## 1) Number of Recent Calls\n",
+    "\n",
+    "You have a RecentCounter class which counts the number of recent requests within a certain time frame.\n",
+    "\n",
+    "Implement the RecentCounter class:\n",
+    "\n",
+    "* RecentCounter() Initializes the counter with zero recent requests.\n",
+    "* int ping(int t) Adds a new request at time t, where t represents some time in milliseconds, and returns the number of requests that has happened in the past 3000 milliseconds (including the new request). Specifically, return the number of requests that have happened in the inclusive range [t - 3000, t].\n",
+    "\n",
+    "It is guaranteed that every call to ping uses a strictly larger value of t than the previous call.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: <br />\n",
+    "[\"RecentCounter\", \"ping\", \"ping\", \"ping\", \"ping\"] <br />\n",
+    "[[], [1], [100], [3001], [3002]]\n",
+    "\n",
+    "Output: <br />\n",
+    "[null, 1, 2, 3, 3]\n",
+    "\n",
+    "Explanation:\n",
+    "\n",
+    "RecentCounter recentCounter = new RecentCounter(); <br />\n",
+    "recentCounter.ping(1);     // requests = [1], range is [-2999,1], return 1 <br />\n",
+    "recentCounter.ping(100);   // requests = [1, 100], range is [-2900,100], return 2 <br />\n",
+    "recentCounter.ping(3001);  // requests = [1, 100, 3001], range is [1,3001], return 3 <br />\n",
+    "recentCounter.ping(3002);  // requests = [1, 100, 3001, 3002], range is [2,3002], return 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "166162c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "564f520d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Slower Solution\n",
+    "\n",
+    "class RecentCounter:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.window = deque()\n",
+    "\n",
+    "    def ping(self, t: int) -> int:\n",
+    "        \n",
+    "        self.window.append(t)\n",
+    "        \n",
+    "        count = 0\n",
+    "        for req_t in self.window:\n",
+    "            if (req_t >= (t - 3000)) and (req_t <= t):\n",
+    "                count += 1\n",
+    "        \n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "c8820caa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RecentCounter:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.window = []\n",
+    "\n",
+    "    def ping(self, t: int) -> int:\n",
+    "        \n",
+    "        self.window.append(t)\n",
+    "        \n",
+    "        while self.window[0] < (t - 3000):\n",
+    "            self.window.pop(0)\n",
+    "        \n",
+    "        return len(self.window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "d525e5bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obj = RecentCounter()\n",
+    "obj.ping(1)\n",
+    "obj.ping(100)\n",
+    "obj.ping(3001)\n",
+    "obj.ping(3002)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c40be3e",
+   "metadata": {},
+   "source": [
+    "## 2) Dota2 Senate\n",
+    "\n",
+    "In the world of Dota2, there are two parties: the Radiant and the Dire.\n",
+    "\n",
+    "The Dota2 senate consists of senators coming from two parties. Now the Senate wants to decide on a change in the Dota2 game. The voting for this change is a round-based procedure. In each round, each senator can exercise one of the two rights:\n",
+    "\n",
+    "* Ban one senator's right: A senator can make another senator lose all his rights in this and all the following rounds.\n",
+    "* Announce the victory: If this senator found the senators who still have rights to vote are all from the same party, he can announce the victory and decide on the change in the game.\n",
+    "\n",
+    "Given a string senate representing each senator's party belonging. The character 'R' and 'D' represent the Radiant party and the Dire party. Then if there are n senators, the size of the given string will be n.\n",
+    "\n",
+    "The round-based procedure starts from the first senator to the last senator in the given order. This procedure will last until the end of voting. All the senators who have lost their rights will be skipped during the procedure.\n",
+    "\n",
+    "Suppose every senator is smart enough and will play the best strategy for his own party. Predict which party will finally announce the victory and change the Dota2 game. The output should be \"Radiant\" or \"Dire\".\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: senate = \"RD\" <br />\n",
+    "Output: \"Radiant\"\n",
+    "\n",
+    "Explanation: \n",
+    "\n",
+    "The first senator comes from Radiant and he can just ban the next senator's right in round 1. <br />\n",
+    "And the second senator can't exercise any rights anymore since his right has been banned. <br />\n",
+    "And in round 2, the first senator can just announce the victory since he is the only guy in the senate who can vote.\n",
+    "\n",
+    "<b>Example</b>\n",
+    "\n",
+    "Input: senate = \"RDD\" <br />\n",
+    "Output: \"Dire\"\n",
+    "\n",
+    "Explanation: \n",
+    "\n",
+    "The first senator comes from Radiant and he can just ban the next senator's right in round 1. <br />\n",
+    "And the second senator can't exercise any rights anymore since his right has been banned. <br />\n",
+    "And the third senator comes from Dire and he can ban the first senator's right in round 1. <br />\n",
+    "And in round 2, the third senator can just announce the victory since he is the only guy in the senate who can vote."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "e2a2b680",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First Solution (not covering all cases)\n",
+    "\n",
+    "def predictPartyVictory(senate: str) -> str:\n",
+    "            \n",
+    "    voting = list(senate)\n",
+    "        \n",
+    "    i = 0\n",
+    "    for i in range(len(voting)):\n",
+    "        if voting[i] == 'R' and 'D' in voting:\n",
+    "            voting[voting.index('D')] = 'N'\n",
+    "        elif voting[i] == 'D' and 'R' in voting:\n",
+    "            voting[voting.index('R')] = 'N'\n",
+    "        \n",
+    "    return 'Dire' if voting.count('D') > voting.count('R') else 'Radiant'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "e8d738ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predictPartyVictory(senate: str) -> str:\n",
+    "    \n",
+    "    n = len(senate)\n",
+    "    \n",
+    "    # Index will be used to find the next turn of Senator\n",
+    "    r_queue = deque()\n",
+    "    d_queue = deque()\n",
+    "    \n",
+    "    for i, s in enumerate(senate):\n",
+    "        if s == 'R':\n",
+    "            r_queue.append(i)\n",
+    "        else:\n",
+    "            d_queue.append(i)\n",
+    "    \n",
+    "    while r_queue and d_queue:\n",
+    "        \n",
+    "        # Pop the Next-Turn Senate from both Q.\n",
+    "        r_turn = r_queue.popleft()\n",
+    "        d_turn = d_queue.popleft()\n",
+    "        \n",
+    "        # ONE having a larger index will be banned by a lower index\n",
+    "        # Lower index will again get Turn, so EN-Queue again\n",
+    "        # But ensure its turn comes in the next round only\n",
+    "        if d_turn < r_turn:\n",
+    "            d_queue.append(d_turn + n)\n",
+    "        else:\n",
+    "            r_queue.append(r_turn + n)\n",
+    "        \n",
+    "    # One's which Empty is not the winner\n",
+    "    return \"Radiant\" if r_queue else \"Dire\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "c03d0cc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Radiant'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senate = \"RD\"\n",
+    "predictPartyVictory(senate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "9705b22a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dire'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "senate = \"RDD\"\n",
+    "predictPartyVictory(senate)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c52785e",
+   "id": "33858687",
    "metadata": {},
    "outputs": [],
    "source": []
